[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lyel-pay"
version = "0.1.0"
description = "Lyel Pay Python SDK"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Lyel Solutions" }]
dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[tool.hatch.build.targets.wheel]
packages = ["lyel_pay"]
